# WSOMailer

./: README.md  pyproject.toml
wsomailer/: __init__.py  __main__.py
