[tool.poetry]
name = "wsomailer"
version = "0.1.1"
description = "WebShellOrb Mailer"
authors = ["Sergey M <tz4678@gmail.com>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/tz4678/WSOMailer"
exclude = [".git"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
wsomailer = "wsomailer:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
